--- a/src/translate/languages/en.json
+++ b/src/translate/languages/en.json
@@ -5,6 +5,7 @@
     "Application.userName": "Username",
     "Application.password": "Password",
     "Application.confirmPassword": "Confirm Password",
+    "Application.passwordsDontMatch": "Passwords don't match",
     "Application.register": "Register",
     "Application.startEditing": "Click on a user to start editing",
     "Application.editing": "Editing user: ",
