--- a/src/translate/languages/ar.json
+++ b/src/translate/languages/ar.json
@@ -5,6 +5,7 @@
     "Application.userName": "اسم المستخدم",
     "Application.password": "كلمة السر",
     "Application.confirmPassword": "تأكيد كلمة السر",
+    "Application.passwordsDontMatch": "كلمات السر غير متطابقة",
     "Application.register": "انشاء حساب",
     "Application.startEditing": "اضغط على مستخدم لتعديله",
     "Application.editing": "تعديل المستخدم: ",
