--- a/src/translate/languages/en.json
+++ b/src/translate/languages/en.json
@@ -7,6 +7,7 @@
     "Application.confirmPassword": "Confirm Password",
     "Application.passwordsDontMatch": "Passwords don't match",
     "Application.required": "Please fill all fields",
+    "Application.incorrect": "Incorrect username or password",
     "Application.register": "Register",
     "Application.startEditing": "Click on a user to start editing",
     "Application.editing": "Editing user: ",
